# biotracker_core

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitignore.save  .gitlab-ci.py  .gitlab-ci.yml  .gitmodules  AlgorithmSelectionWidget.h  BSTrackerConfig.ini  BioTracker.cpp  BioTracker.h  BioTracker.qrc  BioTracker.sln  BioTracker.ui  BioTracker.vcxproj  BioTracker.vcxproj.filters  BioTracker.vcxproj.vspscc  BiotrackerCore.ini  CHANGELOG  CMakeLists.txt  Gui.h  LKTrackerConfig.ini  MainWindow.h  NotificationWidget.h  OpenCameraDialog.h  README.md  VideoControlWidget.h  VideoView.h  config.ini  desktop.ini  main.cpp  ui_BioTracker3VideoControllWidget.h  ui_CameraDevice.h  ui_CameraDeviceSelect.h
BioTracker/: BioTracker3.vpp  BioTracker3.vux  CMakeLists.txt  WindowsClearAllConfiguration.bat
Src/: BioTracker.desktop  BioTracker3App.cpp  BioTracker3App.h  CMakeLists.txt  GuiContext.cpp  GuiContext.h  PluginLoader.cpp  PluginLoader.h  main.cpp
Src/Controller/: ControllerAnnotations.cpp  ControllerAnnotations.h  ControllerAreaDescriptor.cpp  ControllerAreaDescriptor.h  ControllerCommands.cpp  ControllerCommands.h  ControllerCoreParameter.cpp  ControllerCoreParameter.h  ControllerDataExporter.cpp  ControllerDataExporter.h  ControllerGraphicScene.cpp  ControllerGraphicScene.h  ControllerMainWindow.cpp  ControllerMainWindow.h  ControllerNotifications.cpp  ControllerNotifications.h  ControllerPlayer.cpp  ControllerPlayer.h  ControllerPlugin.cpp  ControllerPlugin.h  ControllerTextureObject.cpp  ControllerTextureObject.h  ControllerTrackedComponentCore.cpp  ControllerTrackedComponentCore.h  IControllerCfg.cpp  IControllerCfg.h  null_Controller.cpp  null_Controller.h
Src/IStates/: IPlayerState.cpp  IPlayerState.h
Src/Model/: Annotations.cpp  Annotations.h  BioTracker3ProxyMat.cpp  BioTracker3ProxyMat.h  CoreParameter.cpp  CoreParameter.h  ImageStream.cpp  ImageStream.h  MediaPlayer.cpp  MediaPlayer.h  TextureObject.cpp  TextureObject.h  null_Model.cpp  null_Model.h
Src/View/: AnnotationsView.cpp  AnnotationsView.h  CameraDevice.cpp  CameraDevice.h  CameraDevice.ui  ComponentShape.cpp  ComponentShape.h  CoreParameterView.cpp  CoreParameterView.h  CoreParameterView.ui  GLVideoView.cpp  GLVideoView.h  GraphicsScene.cpp  GraphicsScene.h  GraphicsView.cpp  GraphicsView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NotificationLogBrowser.cpp  NotificationLogBrowser.h  SettingsWindow.cpp  SettingsWindow.h  TextureObjectView.cpp  TextureObjectView.h  TrackedComponentView.cpp  TrackedComponentView.h  TrackedImageView.cpp  TrackedImageView.h  VideoControllWidget.cpp  VideoControllWidget.h  VideoControllWidget.ui
Src/cmake/: CPackLinuxDeployQt.cmake.in  FindPylon5.cmake  Locate.cmake  WinDeployQt5.cmake
Src/resources/: shortcuts.txt
Src/util/: CLIcommands.h  Config.cpp  Config.h  Exceptions.h  Messages.h  PanZoomState.h  ParamNames.h  ScreenHelper.h  VideoCoder.cpp  VideoCoder.h  stdext.h  types.h
biotracker/: BioTracker3App.h  BioTracker3ImageStream.cpp  BioTracker3Player.h  BioTracker3ProxyMat.cpp  BioTrackerApp.h  BioTrackerController.h  BioTrackerTrackingAlgorithm.h  CMakeLists.txt  Exceptions.h  ImageStream.h  PanZoomState.h  Registry.h  TextureObject.h  TrackerStatus.h  TrackingAlgorithm.h  TrackingThread.h  ZmqTrackingAlgorithm.h
biotracker/Controller/: BioTrackerController.cpp  BioTrackerController.h  ControllerContext.cpp  ControllerContext.h  ControllerGraphicScene.cpp  ControllerGraphicScene.h  ControllerMainWindow.cpp  ControllerMainWindow.h  ControllerPlayer.cpp  ControllerPlayer.h  ControllerTextureObject.cpp  ControllerTextureObject.h  ControllerTrackedComponent.cpp  ControllerTrackedComponent.h  ControllerTrackingAlgorithm.cpp  ControllerTrackingAlgorithm.h  TrackerController.cpp  TrackerController.h
biotracker/Interfaces/: ENUMS.h  IBioTrackerContext.h  IBioTrackerContexttrackercontext.cpp  IControllerStrategy.cpp  IControllerStrategy.h  IMainWindow.cpp  IMainWindow.h  IObject.h  IPlayerState.cpp  IPlayerState.h  ITrackedComponent.cpp  ITrackedComponent.h  ITrackedComponentFactory.cpp  ITrackedComponentFactory.h  ITrackedObject.cpp  ITrackedObject.h  ITrackingAlgorithm.cpp  ITrackingAlgorithm.h  IView.cpp  IView.h  IViewMainWindow.cpp  IViewMainWindow.h  IViewOpenGLWidget.cpp  IViewOpenGLWidget.h  IViewTrackedComponent.cpp  IViewWidget.cpp  IViewWidget.h  icontroller.cpp  icontroller.h  imodel.cpp  imodel.h  iview.cpp  iview.h
biotracker/Model/: BioTracker3Player.cpp  BioTracker3Player.h  BioTracker3ProxyMat.h  BioTracker3TextureObject.cpp  BioTracker3TextureObject.h  BioTrackerTrackingAlgorithm.cpp  BioTrackerTrackingAlgorithm.h  TrackedElement.cpp  TrackedElement.h  TrackedObject.cpp  TrackedObject.h  null_Model.h
biotracker/PlayerStates/: InitialState.cpp  InitialState.h  InitialVideoState.cpp  InitialVideoState.h  PStateInitial.cpp  PStateInitial.h  PStateInitialStream.cpp  PStateInitialStream.h  PStatePause.cpp  PStatePlay.cpp  PStatePlay.h  PStateStepBack.cpp  PStateStepForw.cpp  PStateStepForw.h  PStateWait.cpp  PStateWait.h  PStateWaite.cpp  PStateWaite.h  Playing.cpp  Playing.h  StateVideoStepForward.cpp  StateVideoStepForward.h
biotracker/PlayingStrategies/: VideoPlayer.cpp  VideoPlayer.h
biotracker/algorithm/: CMakeLists.txt
biotracker/core/: BioTrackerApp.cpp  BioTrackerApp.h  CMakeLists.txt  ImageStream.cpp  ImageStream.h  Registry.cpp  Registry.h  TextureObject.cpp  TrackingAlgorithm.cpp  TrackingAlgorithm.h  TrackingThread.cpp  TrackingThread.h
biotracker/gui/: AlgorithmSelectionWidget.h  AlgorithmSelectionWidget.ui  BioTracker.qrc  Gui.cpp  Gui.h  MainWindow.cpp  MainWindow.h  NotificationWidget.cpp  NotificationWidget.h  OpenCameraDialog.h  SpinBoxWithSlider.cpp  SpinBoxWithSlider.h  VideoControlWidget.cpp  VideoControlWidget.h  VideoView.cpp  VideoView.h  main.cpp
biotracker/interpreter/: Interpreter.h  PyInterpreter.h  PyQPainter.h  PyTrackingAlgorithm.h
biotracker/serialization/: BioTracker3TrackedObject.h  ObjectModel.h  SerializationData.h  TrackedObject.h  types.hpp
source/: CMakeLists.txt  main.cpp
(+1179 files in other folders)
